# AutoPR-Example

./: .env.example  CHANGELOG.md  README.md  mkdocs.yml  publish_demo.ps1  publish_demo.sh  pyproject.toml  requirements.txt
.github/workflows/: auto-pr-demo.yml
docs/: cli-reference.md  demo-repo.md  github-actions.md  index.md  offline-mode.md  pr-automation.md  quickstart.md
src/: sample.py
src/autopr/: __init__.py  cli.py  main.py
tests/: test_sample.py
