[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopr"
version = "0.3.0-beta"
description = "AI-powered Pull Request Generator & Reviewer - Automate PR titles, descriptions, and code reviews"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AutoPR Team", email = "autopr@example.com"},
]
maintainers = [
    {name = "AutoPR Team", email = "autopr@example.com"},
]
keywords = ["ai", "pull-request", "code-review", "automation", "github", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "fastapi>=0.92.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "click>=8.1.0",
    "pytest>=7.0.0",
    "openai>=1.0.0",
    "anthropic>=0.75.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/surenkotian/AutoPR"
Documentation = "https://autopr.readthedocs.io/"
Repository = "https://github.com/surenkotian/AutoPR"
Issues = "https://github.com/surenkotian/AutoPR/issues"
Changelog = "https://github.com/surenkotian/AutoPR/blob/main/CHANGELOG.md"

[project.scripts]
pr-ai = "autopr.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
